Support for FlatLAF, Dark Mode & some fixes